@startuml BudgetPlan
title BudgetPlan
hide circle
hide stereotype
skinparam classAttributeIconSize 0
skinparam shadowing false
skinparam linetype ortho
skinparam packageTitleFontSize 14
skinparam classFontSize 13

class BusyBreak {
        +LINE : String
        +budgetPlan : BudgetPlan
        +list : List<Activity>
        +getStorage() : Storage
    }


 class Activity {
         +name : String
         +cost : double
         +getDescription() : String
         +getCost() : String
     }

     class BudgetPlan {
         -logger : Logger
         -LINE : String
         +names : ArrayList<String>
         +amounts : ArrayList<Double>
         +categories : ArrayList<String>
         -totalBudget : double

         +setBudget(amount : double) : void
         +getTotalBudget() : double
         +getTotalSpent() : double
         +getRemainingBudget() : double
         +isActivityCategory(category : String) : boolean
         +addActivityExpense(description : String, costString : String) : boolean
         +removeActivityExpense(description : String, costString : String) : boolean
         +updateActivityExpense(oldDesc : String, oldCostStr : String, newDesc : String, newCostStr : String) : void
         +hasExpense(name : String, cost : String, category : String) : boolean
         +syncFromActivities(activities : List<Activity>) : void
         +addExpense(name : String, cost : String, category : String) : boolean
         +deleteExpense(oneBasedIndex : int) : void
         +listExpenses() : void
         +setExpenseCategory(oneBasedIndex : int, newCategory : String) : void
         +listByCategory() : void
         -parseAmount(raw : String) : double
         -printBox(msg : String) : void
     }



class Budget{
  + handleBudget(userInputArray: String[]) : void
}

class BusyBreak {
  + budgetPlan : BudgetPlan
  + getStorage() : Storage
}

class Storage {
  + saveBudgets() : void
  + loadBudgets() : BudgetPlan
}

BusyBreak o-- BudgetPlan
BusyBreak o-- "list : List<Activity>" Activity
BusyBreak o-- Storage : getStorage()

Budget ..> BusyBreak : uses\nLINE, budgetPlan, list,\ngetStorage()
Budget ..> BudgetPlan : setBudget(), addExpense(),\nlist/delete/setcat/sync
Budget ..> Storage : saveBudgets()
Budget ..> History : checkpointWithSave()

BudgetPlan --> Activity : syncs with
BudgetPlan ..> BusyBreak : uses for\nparseAmount logging

@enduml